--- a/CppSubmissionChecker/CppSubmissionChecker_View/CppSubmissionChecker_View.csproj
+++ b/CppSubmissionChecker/CppSubmissionChecker_View/CppSubmissionChecker_View.csproj
@@ -20,8 +20,8 @@
     <PackageReference Include="AvalonEdit" Version="6.1.3.50" />
     <PackageReference Include="MahApps.Metro" Version="2.4.9" />
     <PackageReference Include="MahApps.Metro.IconPacks.Material" Version="4.11.0" />
-    <PackageReference Include="Microsoft.WindowsAPICodePack-Shell" Version="1.1.0" />
     <PackageReference Include="System.Management" Version="7.0.0" />
+    <PackageReference Include="WindowsAPICodePack" Version="7.0.1" />
   </ItemGroup>
 
   <ItemGroup>
