--- a/CppSubmissionChecker/CppSubmissionChecker_View/CppSubmissionChecker_View.csproj
+++ b/CppSubmissionChecker/CppSubmissionChecker_View/CppSubmissionChecker_View.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <StartupObject>CppSubmissionChecker_View.App</StartupObject>
+    <Platforms>AnyCPU;x64;x86</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
