Support for running executables in submissions
Support for running executables in submissions

--- a/CppSubmissionChecker/CppSubmissionChecker_ViewModel/CppSubmissionChecker_ViewModel.csproj
+++ b/CppSubmissionChecker/CppSubmissionChecker_ViewModel/CppSubmissionChecker_ViewModel.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
     <PackageReference Include="SharpCompress" Version="0.32.2" />
   </ItemGroup>
 
