--- a/CppSubmissionChecker/CppSubmissionChecker_ViewModel/CppSubmissionChecker_ViewModel.csproj
+++ b/CppSubmissionChecker/CppSubmissionChecker_ViewModel/CppSubmissionChecker_ViewModel.csproj
@@ -8,8 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Viewmodels\CodeFileViewer_VM.cs~RF12dce3fb.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="SharpCompress" Version="0.32.2" />
   </ItemGroup>
 
