--- a/CppSubmissionChecker/CppSubmissionChecker_ViewModel/CppSubmissionChecker_ViewModel.csproj
+++ b/CppSubmissionChecker/CppSubmissionChecker_ViewModel/CppSubmissionChecker_ViewModel.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
+    <PackageReference Include="DiffPlex" Version="1.7.2" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="SharpCompress" Version="0.32.2" />
