--- a/CppSubmissionChecker/CppSubmissionChecker_View/CppSubmissionChecker_View.csproj
+++ b/CppSubmissionChecker/CppSubmissionChecker_View/CppSubmissionChecker_View.csproj
@@ -2,11 +2,22 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net8.0-windows7.0</TargetFramework>
+    <TargetFramework>net9.0-windows7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <StartupObject>CppSubmissionChecker_View.App</StartupObject>
     <Platforms>AnyCPU;x64;x86</Platforms>
+    <Authors>Fries Boury</Authors>
+    <Product>SubmissionChecker</Product>
+    <PackageIcon>Icon.png</PackageIcon>
+    <AssemblyName>DAESubmissionChecker</AssemblyName>
+    <ApplicationIcon>Icon.ico</ApplicationIcon>
+    <UseWindowsForms>False</UseWindowsForms>
+    <Title>DAE Submission Checker</Title>
+    <Company>DAE</Company>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/FriesBoury/WPF_CppSubmissionChecker</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,9 +31,21 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Icon.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Include="Resources\CSharp_Dark.xml" />
     <EmbeddedResource Include="Resources\JSON_Dark.xml" />
     <EmbeddedResource Include="Resources\XML_Dark.xml" />
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\Icon.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
     <Resource Include="Resources\images\pause.png" />
     <Resource Include="Resources\images\play.png" />
     <Resource Include="Resources\images\stop.png" />
