--- a/CppSubmissionChecker/CppSubmissionChecker_ViewModel/CppSubmissionChecker_ViewModel.csproj
+++ b/CppSubmissionChecker/CppSubmissionChecker_ViewModel/CppSubmissionChecker_ViewModel.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Platforms>AnyCPU;x64;x86</Platforms>
@@ -18,6 +18,10 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="SharpCompress" Version="0.32.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Autograder\AutoGrading.csproj" />
   </ItemGroup>
 
 </Project>
